--- a/mycode.ipynb
+++ b/mycode.ipynb
@@ -1198,11 +1198,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "8\n",
+      "27\n",
+      "64\n",
+      "125\n",
+      "216\n",
+      "343\n",
+      "512\n",
+      "729\n"
+     ]
+    }
+   ],
    "source": [
-    "list_num = []\n",
+    "num = 1\n",
+    "\n",
+    "while True:\n",
+    "    cubed_num = num ** 3\n",
+    "    if cubed_num < 1000:\n",
+    "        print(cubed_num)\n",
+    "        num += 1\n",
+    "    else:    \n",
+    "        break\n",
+    "    \n",
     "\n",
     "\n",
     "        \n",
